test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/extra_credit/goto_skip_static_initializer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[21]:
  int
  identifier(main)
  (
  void
  )
  {
  goto
  identifier(end)
  ;
  static
  int
  identifier(x)
  =
  const int(10)
  ;
  identifier(end)
  :
  return
  identifier(x)
  ;
  }
