test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_types/conflicting_variable_linkage_2.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[27]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(3)
  ;
  {
  extern
  int
  identifier(x)
  ;
  }
  return
  identifier(x)
  ;
  }
  static
  int
  identifier(x)
  =
  const int(10)
  ;
